[tool.poetry]
name = "adventofcode2020"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pre-commit = "^2.9.3"

[tool.pytest.ini_options]
python_files = "day*.py"
addopts = "-q"
norecursedirs = ".venv"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
